# MLJourneyE2E

./: .gitignore  House_price_main.ipynb  METHOD.md  PGSQL_GUIDE.md  POETRY_GUIDE.md  pyproject.toml
eda/: data_analyser.py  data_encoder.py  data_ingest.py  data_ingestor.py  data_inspector.py  data_preprocessor.py
feature_store/: feature_store.py
feature_store/feature_repo/: definations.py  feature_store.yaml
utils/: FEAST.md  logger.py
