[project]
name = "mljourneye2e"
version = "0.1.0"
description = ""
authors = [
    {name = "GMM",email = "codeProjects.gmm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "feast (>=0.50.0,<0.51.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "bentoml (>=1.4.17,<2.0.0)",
    "evidently (>=0.7.11,<0.8.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "deepchecks (>=0.19.1,<0.20.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
